--- a/index.html
+++ b/index.html
@@ -1,43 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Joken WWW-sivut</title>
+  <title>Joken Ekat Bootstrap sivut</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-<!-- Page Wrapper -->
-<div style="background: url(https://bootstrapious.com/i/snippets/sn-bg-image/bg.jpg)" class="page-holder bg-cover">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+    <div class="container">
+      <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
-    <div class="container py-5">
-      <header class="text-center text-white py-5">
-        <h1 class="display-4 font-weight-bold mb-4">Bootstrap Background Image</h1>
-        <p class="lead mb-0">Create a responsive full-page background image window using Bootstrap 4.</p>
-        <p class="font-italic">Snippet By <a href="https://bootstrapious.com" class="text-white">
-            <u>Bootstrapious</u></a>
-        </p>
-      </header>
-  
-      <div class="text-white">
-        <p class="lead">It's not a good approch to deal directly with <code class="bg-white px-2 py-1 rounded">body</code> So, create a wrapper container and make it a full-window height.</p>
-        <p class="lead">Set the wrapper initial height to full window height using <code class="bg-white px-2 py-1 rounded">min-height: 100vh</code></p>
-        <p class="lead">Use <code class="bg-white px-2 py-1 rounded">.bg-cover</code> to make the background fit all viewports.</p>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navmenu">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a href="#learn" class="nav-link">What you'll learn</a>
+          </li>
+          <li class="nav-item">
+            <a href="#questions" class="nav-link">Questions</a>
+          </li>
+          <li class="nav-item">
+            <a href="#instructors" class="nav-link">Instructors</a>
+          </li>
+        </ul>
       </div>
+    </div>
 
+  </nav>
+
+  <!-- Showcase -->
+  <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+    <div class="container">
+      <div class="d-sm-flex align-items-center justify-content-between">
+        <div>
+          <h1>Become a <span class="text-warning"> Web Developer</span></h1>
+          <p class="lead my-4">Anim nisi est tempor dolor nostrud in cillum cillum anim reprehenderit in. Veniam nulla
+            incididunt est velit esse aute ipsum mollit amet do consectetur.</p>
+          <button class="btn btn-primary btn-lg">Start The Enrollment</button>
+        </div>
+        <img class="img-fluid w-50 d-none d-sm-block" src="img/showcase.svg" alt="">
+      </div>
+    </div>
+  </section>
+
+  <!-- Newsletter -->
+  <section class="bg-primary text-light p-5">
+    <div class="container">
+      <div class="d-md-flex justify-content-between align-items-center">
+        <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
+
+        <div class="input-group news-input">
+          <input type="text" class="form-control" placeholder="Enter email" />
+          <button class="btn btn-dark btn-lg" type="button" id="button-addon2">
+            Button
+          </button>
+        </div>
+
+      </div>
+    </div>
+  </section>
+
+<!-- Boxex -->
+<section class="p-5">
+  <div class="container">
+    <div class="row text-center g-4">
+      <div class="col-md">
+        <div class="card bg-dark text-light">
+          <div class="card-body text-center">
+            <div class="h1 mb-3">
+              <i class="bi bi-laptop"></i>
+            </div>
+            <h3 class="card-title mb-3">
+              Virtual
+            </h3>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem assumenda consectetur aliquid incidunt iste velit.
+            </p>
+            <a href="#" class="btn btn-primary">Read more</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md text-center">
+        <div class="card bg-secondary text-light">
+          <div class="card-body text-center">
+            <div class="h1 mb-3">
+              <i class="bi bi-person-square"></i>
+            </div>
+            <h3 class="card-title mb-3">Hybrid</h3>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem assumenda consectetur aliquid incidunt iste velit.
+            </p>
+            <a href="#" class="btn btn-dark">Read more</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md text-center">
+        <div class="card bg-dark text-light">
+          <div class="card-body text-center">
+            <div class="h1 mb-3">
+              <i class="bi bi-people"></i>
+            </div>
+            <h3 class="card-title mb-3">In Person</h3>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem assumenda consectetur aliquid incidunt iste velit.
+            </p>
+            <a href="#" class="btn btn-primary">Read more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Learn sections -->
+<section id="learn" class="p-5">
+  <div class="container">
+    <div class="row align-items-center justify-conten-between">
+      <div class="col-md">
+        <img src="/img/" alt="">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+  <div class="container-fluid p-5 bg-secondary text-white text-center">
+    <h1>About Me</h1>
+    <span class="avatar"><img src="/img/jokke_sm.png" alt="jokke"></span>
+    <p>Resize this responsive page to see the effect!</p>
+  </div>
+
+  <div class="container mt-5">
+    <div class="row">
+      <div class="col-sm-3">
+        <h3>Wordpress</h3>
+        <p>Olen tehnyt www-sivuja wordpressillä vuodesta 2008.</p>
+        <p>Valmiita sivuja joita on ollut tuotannossa on yli 100.</p>
+      </div>
+      <div class="col-sm-3">
+        <h3>HTML/CSS</h3>
+        <p>WWW-sivujen muokkaamiseen kulmakivet html ja css ovat toinen kieleni.</p>
+        <p>Valmiissakin teemapohjissa pitää aina tehdä jotakin muutoksia asiakkaalle.</p>
+      </div>
+      <div class="col-sm-3">
+        <h3>Bootstrap</h3>
+        <p>Tämä on suht uusi tuttavuus jota aloin opiskelemaan.</p>
+        <p>Nämä sivut ovat Bootstrapilla tehty.</p>
+        <p>Aina on hyvä oppia uutta!</p>
+      </div>
+      <div class="col-sm-3">
+        <h3>jQuery/Javascript</h3>
+        <p>Tästä en juurikaan paljoa ymmärrä, mutta toivon oppivani tällä kurssilla lisää.</p>
+        <p>Sen tiedän että tällä saa paljon aikaiseksi.</p>
+      </div>
     </div>
   </div>
 
-    <div class="">
-
-    </div>
-    <h1>Tervetuloa</h1>
-    
-    <p>Consequat cupidatat labore aliqua ea ex id culpa. Minim est amet proident enim amet amet nulla et officia fugiat consequat dolore consequat consectetur. Eu deserunt sit tempor irure officia incididunt occaecat mollit sunt esse nostrud reprehenderit. Laboris do occaecat sit ullamco adipisicing dolor Lorem ea excepteur ipsum. Incididunt labore est fugiat duis Lorem cupidatat proident officia exercitation est labore nostrud velit aliqua. Enim nisi tempor deserunt ipsum occaecat. Officia elit et sint do cillum sunt sit incididunt qui.</p>
-    
-
-
 </body>
-</html>
 
+</html>
