--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             <a href="#learn" class="nav-link">What you'll learn</a>
           </li>
           <li class="nav-item">
-            <a href="#faq" class="nav-link">Questions</a>
+            <a href="#faq" class="nav-link">UKK</a>
           </li>
           <li class="nav-item">
-            <a href="#instructors" class="nav-link">Instructors</a>
+            <a href="#career" class="nav-link">Työkokemus</a>
           </li>
         </ul>
       </div>
@@ -42,10 +42,11 @@
     <div class="container">
       <div class="d-sm-flex align-items-center justify-content-between">
         <div>
-          <h1>Become a <span class="text-warning"> Web Developer</span></h1>
-          <p class="lead my-4">Anim nisi est tempor dolor nostrud in cillum cillum anim reprehenderit in. Veniam nulla
-            incididunt est velit esse aute ipsum mollit amet do consectetur.</p>
-          <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Start The Enrollment</button>
+          <h1>Hei, nimeni on<span class="text-warning"> Joacim Rönn</span></h1>
+          <p class="lead my-4">Tässä vähän taustaa minusta. Kokenut järjestelmäasiantuntija, joka hallitsee Macit, Windowsit ja Linuxit. 
+            Vahvuuksiani ovat asiakaslähtöinen ajattelutapa ja periksiantamaton ongelmanratkaisu. Tykkään oppia uutta, se toimii minulle motivaattorina.
+            </p>
+          <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#enroll">Ota yhteyttä</button>
         </div>
         <img class="img-fluid w-50 d-none d-sm-block" src="img/showcase.svg" alt="">
       </div>
@@ -168,23 +169,19 @@
   <!-- Question accordion -->
   <section id="faq" class="p-5">
     <div class="container">
-      <h2 class="text-center mb-4">Frequently asked questions</h2>
+      <h2 class="text-center mb-4">Usein kysytyt kysymykset</h2>
       <div class="accordion accordion-flush" id="questions">
         <!-- Item 1 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-one">
-              Where exactly are you located?
+              <h5>Korjaatko puhelimia?</h5>
             </button>
           </h2>
           <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
             data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat consectetur quo
-              expedita voluptatum dolorem officia consequatur, ad adipisci voluptas, nisi architecto aperiam magni
-              magnam deleniti, cumque distinctio temporibus? Ex, exercitationem ipsa. Dolor eaque adipisci reprehenderit
-              tempora nihil, blanditiis repellat, labore laboriosam placeat non officia voluptate laborum doloremque
-              atque! Quae, natus!</div>
+            <div class="accordion-body">En varsinaisesti korjaa puhelimia, siihen tarvitaan pölytön ympäristö. Mutta jos esim. olet ostanut uuden puhelimen, niin siihen saat minulta apua.</div>
           </div>
         </div>
         <!-- Item 2 -->
@@ -192,15 +189,16 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-two">
-              How much does it cost to attend?
+              <h5>Miksi tietokoneeni on hidas?</h5>
             </button>
           </h2>
           <div id="question-two" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
             data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo excepturi vel sed,
-              perspiciatis voluptatem maxime quae itaque incidunt vero voluptas ex aperiam placeat repudiandae facilis
-              deserunt quod autem optio error hic culpa aspernatur, quasi non. Quia repudiandae quae ipsum dicta unde
-              provident. Minus distinctio tempore nam aperiam recusandae sequi molestias?</div>
+            <div class="accordion-body">
+              <h6>Siihen voi olla monta syytä miksi tietokone on hidas.</h6> 
+              <p>Koneessa ei ole tarpeeksi vapaata tilaa kiintolevyllä, koneeseen on päässyt luikahtamaan joku haittaohjelma tai jopa virus. Myöskin jos koneessa on useita ohjelmia samanaikaisetsi käynnissä, voi olla syy hidastumiselle. Koneessasi saattaa olla liian vähän keskusmuistia (RAM) usemman ohjelman samanaikaseen käyttöön.</p>
+              <p>Näihin yllä mainittuihin ja moniin muihin tietokone ongelmiin voin tarjota apua.</p>
+            </div>
           </div>
         </div>
         <!-- Item 3 -->
@@ -208,15 +206,21 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-three">
-              What do i need to know?
+              <h5>Kuinka paljon maksaa nettisivujen tekeminen?</h5>
             </button>
           </h2>
           <div id="question-three" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
             data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque laborum
-              officia aspernatur tenetur corrupti? Iure est rerum nostrum reiciendis exercitationem ipsum soluta dicta?
-              Suscipit corrupti, pariatur aspernatur voluptatibus voluptate soluta natus itaque delectus nesciunt totam
-              necessitatibus, ex voluptatum autem, ad mollitia ab veritatis accusamus et optio iste. Natus, sunt.</div>
+            <div class="accordion-body">
+              <h6>Nettisivujen tekeminen riippuu monesta asiasta.</h6>
+              <ul>
+                <li>Onko sinulla jo entuudestaan sivut jossakin <a href="https://www.hostingpalvelu.fi/webhotellit/">www-hotellissa</a> (hinnat alk. 6€/kk +alv 24%) ? </li>
+                <li>Omistatko <a href="https://www.hostingpalvelu.fi/asiakkaat/domain-verkkotunnus-haku">domainin</a> (eli www-osoitteen, hinnat alk. 3,95€/vuosi +alv 24%)?</li>
+                <li>Kuinka monimutkikkaita sivuja olet miettinyt?</li>
+                <li>Onko sinulla jo valmiina kuvat? Tarviiko niitä muokata?</li>
+              </ul>
+              <p>Niin kuin huomasit, nettisivuille ei voi suoraan antaa mitään kiinteää hintaa. Jos sinulla on kaikki edellä mainitut asiat jo kunnossa, niin silloin yhden sivun www-sivujen (ns. <a href="https://www.kirmanen.fi">onepager</a>) lähtöhinta on 500€ ALV0%.</p>
+            </div>
           </div>
         </div>
         <!-- Item 4 -->
@@ -224,7 +228,7 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-four">
-              How do I sign up?
+              <h5>How do I sign up?</h5>
             </button>
           </h2>
           <div id="question-four" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
@@ -240,7 +244,7 @@
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-five">
-              Will you help me find a job?
+              <h5>Will you help me find a job?</h5>
             </button>
           </h2>
           <div id="question-five" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
@@ -255,70 +259,161 @@
     </div>
   </section>
 
-  <!-- Instructors -->
-  <section id="instructors" class="p-5 bg-primary">
+  <!-- Työkokemus -->
+  <section id="career" class="p-5 bg-primary">
     <div class="container">
-      <h2 class="text-center text-white">Our Instructors</h2>
+      <h2 class="text-center text-white">Työkokemus</h2>
       <p class="lead text-center text-white mb-5">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit illo maxime, rem alias ad nemo?
+        Hei tässä minun työhistoria, vihreällä taustalla olevat ovat yrityksiä joille teen edelleen keikkaluontoisesti töitä.
       </p>
       <div class="row g-4">
         <div class="col-md-6 col-lg-3">
-          <div class="card bg-light">
-            <div class="card-body text-center">
-              <img src="https://randomuser.me/api/portraits/men/11.jpg" class="rounded-circle mb-3" alt="">
-              <h3 class="card-title">John Doe</h3>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, nulla facilis. Sunt
-                suscipit mollitia beatae.</p>
-              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+          <div class="card bg-success">
+            <div class="card-body text-center text-light">
+              <img src="/img/megaman.jpg" class="rounded-circle mb-3" alt="Megaman">
+              <h4 class="card-title">Megaman Oy</h3>
+              <p class="card-text">IT-huollon vastuuhenkilö, asiakaspalvelu, puhelintuki, etätuki, 
+                tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden 
+                vuosihuolto. Myös yrityksen graafinen suunnittelu, www-sivut (myös 
+                asiakkaiden) ja mainokset. 
+                </p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-light mx-1"> Multiasentaja 2019 -</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="https://megaman.pro">
+                      <i class="bi bi-globe text-light mx-1"> Megaman Oy</i>
+                    </a>
+                  </li>
+                </ul>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="https://randomuser.me/api/portraits/men/6.jpg" class="rounded-circle mb-3" alt="">
-              <h3 class="card-title">Steve Smith</h3>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, nulla facilis. Sunt
-                suscipit mollitia beatae.</p>
-              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <img src="/img/digitaaliset.jpg" class="rounded-circle mb-3" alt="Digitaaliset">
+              <h4 class="card-title">Luottodata Oy/Digitaaliset</h4>
+              <p class="card-text">Asiakaspalvelu, tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden vuosihuolto, hifi-laitteiden puhdistus. Myös yrityksen graafinen suunnittelu, www-sivut (myös asiakkaiden) ja mainokset.</p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-dark mx-1"> Huoltopäälikkö 2018-2019</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="http://digitaaliset.fi/">
+                      <i class="bi bi-globe text-dark mx-1"> Digitaaliset Oy</i>
+                    </a>
+                  </li>
+                </ul>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="https://randomuser.me/api/portraits/women/11.jpg" class="rounded-circle mb-3" alt="">
-              <h3 class="card-title">Sara Smith</h3>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, nulla facilis. Sunt
-                suscipit mollitia beatae.</p>
-              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <img src="/img/uef.jpg" class="rounded-circle mb-3" alt="University Of Eastern Finland">
+              <h4 class="card-title">Itä-Suomen Yliopisto Aducate</h4>
+              <p class="card-text">Asiakaspalvelu, tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden vuosihuolto, hifi-laitteiden puhdistus. Myös yrityksen graafinen suunnittelu, www-sivut (myös asiakkaiden) ja mainokset.</p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-dark mx-1"> Tietotekniikan sihteeri 2009-2016</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="https://uef.fi">
+                      <i class="bi bi-globe text-dark mx-1"> UEF</i>
+                    </a>
+                  </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-success text-light">
+            <div class="card-body text-center">
+              <img src="/img/taidelukio.jpg" class="rounded-circle mb-3" alt="Savonlinnan Taidelukio">
+              <h4 class="card-title">Savonlinnan Taidelukio</h4>
+              <p class="card-text">Asennettu Applen OS X Server sekä luokkakohtaiset koneet.
+                Toteutettu koneiden palautusjärjestelmä verkon kautta käyttäen
+                Applen OS X Server ja OpenSource-ohjelmistoja.
+                Koneiden ja palvelimen ylläpito ja päivitys sekä www-sivujen suunnittelu ja
+                kehitystyö.
+                </p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-light mx-1"> Järjestelmäasiantuntija 2008 -</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="https://taidelukio.fi">
+                      <i class="bi bi-globe text-light mx-1"> Savonlinnan taidelukio</i>
+                    </a>
+                  </li>
+                </ul>
             </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="https://randomuser.me/api/portraits/women/13.jpg" class="rounded-circle mb-3" alt="">
-              <h3 class="card-title">Jane Doe</h3>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, nulla facilis. Sunt
-                suscipit mollitia beatae.</p>
-              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <img src="/img/blc.jpg" class="rounded-circle mb-3" alt="Blue Lake Communication">
+              <h4 class="card-title">Savonlinnan Puhelin Oy</h4>
+              <p class="card-text">Vastuualueena laskujen tiliöinti, tuotteiden hinnoittelu järjestelmään,
+                uusien tuotteiden luonti ja poisto, toimistotarvikkeiden tilaus, tavaran 
+                vastaanotto yms.
+                </p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-dark mx-1"> Varastokirjanpitäjä 2007-2009</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="https://blc.fi">
+                      <i class="bi bi-globe text-dark mx-1"> BLC Oy</i>
+                    </a>
+                  </li>
+                </ul>
             </div>
           </div>
         </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="/img/pg.jpg" class="rounded-circle mb-3" alt="People Group">
+              <h4 class="card-title">People Group Oy</h4>
+              <p class="card-text">Kokonaisvaltainen vastuu omien asiakkaiden IT-ratkaisuista ja suunnittelusta. Mac ja Windows työasemat sekä backup/tiedosto palvelimet.
+                </p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-dark mx-1"> Järjestelmäasiantuntija 1999-2006</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="https://www.peoplegroup.fi/">
+                      <i class="bi bi-globe text-dark mx-1"> People Group Oy</i>
+                    </a>
+                  </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="/img/klinkmann.jpg" class="rounded-circle mb-3" alt="Klinkmann">
+              <h4 class="card-title">Oy Klinkmann Ab</h4>
+              <p class="card-text">Toimenkuvaan kuului niin rekan purkua trukilla, hyllyjen täyttöä aina tavaran syöttämiseen järjestelmään.</p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-dark mx-1"> Varastomies 1989-1996</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="https://www.klinkmann.fi/">
+                      <i class="bi bi-globe text-dark mx-1"> Oy Klinkmann Ab</i>
+                    </a>
+                  </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+        
       </div>
     </div>
   </section>
