Varjot työpaikka kuviin

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-success">
             <div class="card-body text-center text-light">
-              <img src="/img/megaman.jpg" class="rounded-circle mb-3" alt="Megaman">
+              <img src="/img/megaman.jpg" class="rounded-circle shadow mb-3" alt="Megaman">
               <h4 class="card-title">Megaman Oy</h3>
               <p class="card-text">IT-huollon vastuuhenkilö, asiakaspalvelu, puhelintuki, etätuki, 
                 tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden 
@@ -293,7 +293,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="/img/digitaaliset.jpg" class="rounded-circle mb-3" alt="Digitaaliset">
+              <img src="/img/digitaaliset.jpg" class="rounded-circle shadow mb-3" alt="Digitaaliset">
               <h4 class="card-title">Luottodata Oy/Digitaaliset</h4>
               <p class="card-text">Asiakaspalvelu, tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden vuosihuolto, hifi-laitteiden puhdistus. Myös yrityksen graafinen suunnittelu, www-sivut (myös asiakkaiden) ja mainokset.</p>
                 <ul class="list-group list-group-flush">
@@ -312,7 +312,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="/img/uef.jpg" class="rounded-circle mb-3" alt="University Of Eastern Finland">
+              <img src="/img/uef.jpg" class="rounded-circle shadow mb-3" alt="University Of Eastern Finland">
               <h4 class="card-title">Itä-Suomen Yliopisto Aducate</h4>
               <p class="card-text">Asiakaspalvelu, tietokonehuolto, komponenttien vaihto, virusten siivous, koneiden vuosihuolto, hifi-laitteiden puhdistus. Myös yrityksen graafinen suunnittelu, www-sivut (myös asiakkaiden) ja mainokset.</p>
                 <ul class="list-group list-group-flush">
@@ -331,7 +331,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-success text-light">
             <div class="card-body text-center">
-              <img src="/img/taidelukio.jpg" class="rounded-circle mb-3" alt="Savonlinnan Taidelukio">
+              <img src="/img/taidelukio.jpg" class="rounded-circle shadow mb-3" alt="Savonlinnan Taidelukio">
               <h4 class="card-title">Savonlinnan Taidelukio</h4>
               <p class="card-text">Asennettu Applen OS X Server sekä luokkakohtaiset koneet.
                 Toteutettu koneiden palautusjärjestelmä verkon kautta käyttäen
@@ -355,7 +355,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="/img/blc.jpg" class="rounded-circle mb-3" alt="Blue Lake Communication">
+              <img src="/img/blc.jpg" class="rounded-circle shadow mb-3" alt="Blue Lake Communication">
               <h4 class="card-title">Savonlinnan Puhelin Oy</h4>
               <p class="card-text">Vastuualueena laskujen tiliöinti, tuotteiden hinnoittelu järjestelmään,
                 uusien tuotteiden luonti ja poisto, toimistotarvikkeiden tilaus, tavaran 
@@ -377,7 +377,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="/img/pg.jpg" class="rounded-circle mb-3" alt="People Group">
+              <img src="/img/pg.jpg" class="rounded-circle shadow mb-3" alt="People Group">
               <h4 class="card-title">People Group Oy</h4>
               <p class="card-text">Kokonaisvaltainen vastuu omien asiakkaiden IT-ratkaisuista ja suunnittelusta. Mac ja Windows työasemat sekä backup/tiedosto palvelimet.
                 </p>
@@ -397,7 +397,7 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="/img/klinkmann.jpg" class="rounded-circle mb-3" alt="Klinkmann">
+              <img src="/img/klinkmann.jpg" class="rounded-circle shadow mb-3" alt="Klinkmann">
               <h4 class="card-title">Oy Klinkmann Ab</h4>
               <p class="card-text">Toimenkuvaan kuului niin rekan purkua trukilla, hyllyjen täyttöä aina tavaran syöttämiseen järjestelmään.</p>
                 <ul class="list-group list-group-flush">
