Call to action muutos

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
   <!-- Newsletter -->
   <section class="bg-primary text-light p-5">
     <div class="container">
-      <div class="d-md-flex justify-content-between align-items-center">
-        <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
-        <div class="input-group news-input">
+      <div class="text-center">
+        <h3 class="mb-3 mb-md-0">Koskaan ei ole liian myöhäsitä opiskella jotakin uutta!</h3>
+        <!-- <div class="input-group news-input">
           <input type="text" class="form-control" placeholder="Enter email" />
           <button class="btn btn-dark btn-lg" type="button" id="button-addon2">
             Button
-          </button>
+          </button> -->
         </div>
       </div>
     </div>
