Koulun lisäys historiaan

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
           <li class="nav-item">
             <a href="#career" class="nav-link">Työkokemus</a>
           </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Ota yhteyttä</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -398,6 +401,25 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
+              <img src="/img/stadin_ao.jpg" class="rounded-circle shadow mb-3" alt="Stadin AO">
+              <h4 class="card-title">Stadin ammattiopisto</h4>
+              <p class="card-text">Opiskelin vuosin 1996-1999 Käpylän ammattioppilaitoksella sähkö- tietotekniikka ja elektroniikka linjalla.</p>
+                <ul class="list-group list-group-flush">
+                  <li class=" list-group item">
+                    <i class="bi bi-tools text-dark mx-1"> Sähkö- tietotekniikka ja elektroniikka linja 1996-1999</i>
+                  </li>
+                  <li class="list-group item"></li>
+                    <a href="https://stadinao.fi/">
+                      <i class="bi bi-globe text-dark mx-1"> Stadin AO</i>
+                    </a>
+                  </li>
+                </ul>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
               <img src="/img/klinkmann.jpg" class="rounded-circle shadow mb-3" alt="Klinkmann">
               <h4 class="card-title">Oy Klinkmann Ab</h4>
               <p class="card-text">Toimenkuvaan kuului niin rekan purkua trukilla, hyllyjen täyttöä aina tavaran syöttämiseen järjestelmään.</p>
@@ -420,27 +442,27 @@
   </section>
 
   <!-- Contact & Map -->
-  <section class="p-5">
+  <section id="contact" class="p-5">
     <div class="container">
       <div class="row g-4">
         <div class="col-md">
-          <h2 class="text-center mb-4">Contact Info</h2>
+          <h2 class="text-center mb-4">Minut löydät</h2>
           <ul class="list-group list-group-flush lead">
             <li class="list-group item">
-              <span class="fw-bold">Main Location:</span> 50 Main st Boston MA
+              <span class="fw-bold">Asun:</span> Sulkavalla
             </li>
             <li class="list-group item">
-              <span class="fw-bold">Enrollment Phone:</span> (555)-555-5555
+              <span class="fw-bold">Sähköposti:</span>jokke72[@]gmail.com
             </li>
             <li class="list-group item">
-              <span class="fw-bold">Student Phone:</span> (333)-333-3333
+              <span class="fw-bold">Sosiaalinen media:</span>
+              <a href="https://www.instagram.com/joacimronn"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              <a href="https://www.linkedin.com/in/joacim-r%C3%B6nn-8ab2251/"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="https://www.youtube.com/channel/UC6gwaVZ7x_C6fRnhLJGqlyA"><i class="bi bi-youtube text-dark mx-1"></i></a>
             </li>
-            <li class="list-group item">
-              <span class="fw-bold">Enrollment email:</span>enroll@frontendbc.test
-            </li>
-            <li class="list-group item">
+            <!-- <li class="list-group item">
               <span class="fw-bold">Student email:</span>student@frontendbc.test
-            </li>
+            </li> -->
           </ul>
         </div>
         <div class="col-md">
@@ -542,7 +564,7 @@
       container: 'map',
       style: 'mapbox://styles/jokke72/cl2iqpzgi000d14qqhoct03t0',
       center: [28.371908, 61.786930],
-      zoom: 15
+      zoom: 13
     });
   </script>
 </body>
