--- a/index.html
+++ b/index.html
@@ -456,9 +456,9 @@
             </li>
             <li class="list-group item">
               <span class="fw-bold">Sosiaalinen media:</span>
-              <a href="https://www.instagram.com/joacimronn"><i class="bi bi-instagram text-dark mx-1"></i></a>
-              <a href="https://www.linkedin.com/in/joacim-r%C3%B6nn-8ab2251/"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-              <a href="https://www.youtube.com/channel/UC6gwaVZ7x_C6fRnhLJGqlyA"><i class="bi bi-youtube text-dark mx-1"></i></a>
+              <a href="https://www.instagram.com/joacimronn"><i class="bi bi-instagram text-dark mx-1"></i> /joacimronn</a>
+              <a href="https://www.linkedin.com/in/joacim-r%C3%B6nn-8ab2251/"><i class="bi bi-linkedin text-dark mx-1"> Joacim Rönn</i></a>
+              <a href="https://www.youtube.com/channel/UC6gwaVZ7x_C6fRnhLJGqlyA"><i class="bi bi-youtube text-dark mx-1"></i> Joke-M0ni</a>
             </li>
             <!-- <li class="list-group item">
               <span class="fw-bold">Student email:</span>student@frontendbc.test
