--- a/index.html
+++ b/index.html
@@ -266,9 +266,9 @@
   <!-- Työkokemus -->
   <section id="career" class="p-5 bg-primary">
     <div class="container">
-      <h2 class="text-center text-white">Työkokemus</h2>
+      <h2 class="text-center text-white">Työkokemus / opiskelu</h2>
       <p class="lead text-center text-white mb-5">
-        Hei tässä minun työhistoria, vihreällä taustalla olevat ovat yrityksiä joille teen edelleen keikkaluontoisesti töitä.
+        Hei tässä minun työhistoria sekä opiskeluni. Vihreällä taustalla olevat ovat yrityksiä joille teen edelleen keikkaluontoisesti töitä.
       </p>
       <div class="row g-4">
         <div class="col-md-6 col-lg-3">
@@ -436,7 +436,6 @@
             </div>
           </div>
         </div>
-        
       </div>
     </div>
   </section>
@@ -446,11 +445,20 @@
     <div class="container">
       <div class="row g-4">
         <div class="col-md">
-          <h2 class="text-center mb-4">Minut löydät</h2>
           <ul class="list-group list-group-flush lead">
             <li class="list-group item">
-              <span class="fw-bold">Asun:</span> Sulkavalla
+              <span class="fw-bold">Nimi:</span> Joacim Rönn
             </li>
+            <li class="list-group item">
+              <span class="fw-bold">Ikä:</span> 50v
+            </li>
+            <li class="list-group item">
+              <span class="fw-bold">Asun:</span>Sulkavalla
+            </li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <ul class="list-group list-group-flush lead">
             <li class="list-group item">
               <span class="fw-bold">Sähköposti:</span>jokke72[@]gmail.com
             </li>
