--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="d-sm-flex align-items-center justify-content-between">
         <div>
           <h1>Hei, nimeni on<span class="text-warning"> Joacim Rönn</span></h1>
-          <p class="lead my-4">Tässä vähän taustaa minusta. Kokenut järjestelmäasiantuntija, joka hallitsee Macit,
+          <p class="lead my-4">Ja tässä vähän taustaa minusta. Olen kokenut järjestelmäasiantuntija, joka hallitsee Macit,
             Windowsit ja Linuxit.
             Vahvuuksiani ovat asiakaslähtöinen ajattelutapa ja periksiantamaton ongelmanratkaisu. Tykkään oppia uutta,
             se toimii minulle motivaattorina.
@@ -106,7 +106,7 @@
             <div class="card-body d-flex flex-column bg-secondary text-center">
               <h3 class="card-title mb-3">Wordpress</h3>
               <p>Olen tehnyt www-sivuja wordpressillä vuodesta 2008.</p>
-              <p>Valmiita sivuja joita on ollut tuotannossa on yli 100.</p>
+              <p>Valmiita sivuja joita on päätynyt tuotantoon on yli 100.</p>
             </div>
             <div class="card-footer bg-light p-3">
               <a href="https://www.wordpress.org" class="btn btn-lg btn-outline-primary">Wordpress</a>
@@ -132,7 +132,7 @@
             <img src="/img/bootstrap.jpg" class="mb-3" alt="Bootstrap">
             <div class="card-body d-flex flex-column bg-secondary text-center">
               <h3 class="card-title mb-3">Bootstrap</h3>
-              <p>Tämä on suhteellisen uusi tuttavuus jota aloin opiskelemaan.</p>
+              <p>Tämä on minulle uusi tuttavuus jota aloin opiskelemaan.</p>
               <p>Nämä sivut ovat Bootstrapilla tehty.</p>
             </div>
             <div class="card-footer bg-light p-3">
