--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+  <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/styles.css">
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 </head>
@@ -79,16 +80,15 @@
           <div class="card bg-dark text-light">
             <div class="card-body text-center">
               <div class="h1 mb-3">
-                <i class="bi bi-laptop"></i>
+                <i class="bi bi-file-earmark-pdf"></i>
               </div>
               <h3 class="card-title mb-3">
-                Virtual
+                Minun CV
               </h3>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem assumenda consectetur aliquid
-                incidunt iste velit.
+                Hei, alla olevasta napista voit ladata minun CV:n.
               </p>
-              <a href="#" class="btn btn-primary">Read more</a>
+              <a href="/assets/CV.pdf" target="_blank" class="btn btn-primary"><i class="bi bi-file-earmark-pdf"></i> CV.pdf</a>
             </div>
           </div>
         </div>
@@ -98,16 +98,15 @@
               <div class="h1 mb-3">
                 <i class="bi bi-person-square"></i>
               </div>
-              <h3 class="card-title mb-3">Hybrid</h3>
+              <h3 class="card-title mb-3">Minusta</h3>
               <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem assumenda consectetur aliquid
-                incidunt iste velit.
+                Jos olet kiinnostunut tietämään enemmän minusta, lataa minusta pdf-tiedosto.
               </p>
-              <a href="#" class="btn btn-dark">Read more</a>
+              <a href="/assets/Mina.pdf" target="_blank" class="btn btn-dark"><i class="bi bi-file-earmark-pdf"></i> Minä.pdf</a>
             </div>
           </div>
         </div>
-        <div class="col-md text-center">
+        <!-- <div class="col-md text-center">
           <div class="card bg-dark text-light">
             <div class="card-body text-center">
               <div class="h1 mb-3">
@@ -121,13 +120,13 @@
               <a href="#" class="btn btn-primary">Read more</a>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
 
   <!-- Learn sections -->
-  <section id="learn" class="p-5">
+  <!-- <section id="learn" class="p-5">
     <div class="container">
       <div class="row align-items-center justify-conten-between">
         <div class="col-md">
@@ -137,35 +136,65 @@
           <h2>Learn the fundementals</h2>
           <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatibus quaerat odio
             esse, debitis at!</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae vitae, aut inventore deserunt
-            perspiciatis deleniti, est quae rerum porro non dicta quo quaerat molestias repellat eum, eaque sint iste
-            pariatur.</p>
-          <a href="#" class="btn btn-light mt-3">
-            <i class="bi bi-chevron-right"></i> Read more
-          </a>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae vitae, aut inventore deserunt
+              perspiciatis deleniti, est quae rerum porro non dicta quo quaerat molestias repellat eum, eaque sint iste
+              pariatur.</p>
+              <a href="#" class="btn btn-light mt-3">
+                <i class="bi bi-chevron-right"></i> Read more
+              </a>
+            </div>
+          </div>
         </div>
+      </section> -->
+      
+      <section id="learn" class="p-5 bg-dark text-light">
+        <h2 class="text-center mb-4">Portfolio</h2>
+        <div class="container col-md-5">
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/assets/openshoressaimaa.jpg" class="d-block w-100" alt="image">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Open Shores Saimaa mainos video</h5>
+              <p>Minun kuvaama ja editoima</p>
+              <a href="https://www.youtube.com/watch?v=eUhuwpOWoXQ" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Katso video</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/assets/sares.jpg" class="d-block w-100" alt="image">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Säres-Center</h5>
+              <p>Minun viimeisin www-sivusto asiakkaalle</p>
+              <a href="https://säres.fi" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Avaa www-sivut</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/assets/savonlinna.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+              <a href="https://youtu.be/pefkMymT9Lk" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Katso video</a>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-    </div>
-  </section>
 
-  <section id="learn" class="p-5 bg-dark text-light">
-    <div class="container">
-      <div class="row align-items-center justify-conten-between">
-        <div class="col-md p-5">
-          <h2>Learn React</h2>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatibus quaerat odio
-            esse, debitis at!</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae vitae, aut inventore deserunt
-            perspiciatis deleniti, est quae rerum porro non dicta quo quaerat molestias repellat eum, eaque sint iste
-            pariatur.</p>
-          <a href="#" class="btn btn-light mt-3">
-            <i class="bi bi-chevron-right"></i> Read more
-          </a>
-        </div>
-        <div class="col-md">
-          <img class="img-fluid" src="/img/react.svg" alt="">
-        </div>
-      </div>
+
+
+
     </div>
   </section>
 
@@ -184,7 +213,7 @@
           </h2>
           <div id="question-one" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
             data-bs-parent="#questions">
-            <div class="accordion-body">En varsinaisesti korjaa puhelimia, siihen tarvitaan pölytön ympäristö. Mutta jos esim. olet ostanut uuden puhelimen, niin siihen saat minulta apua.</div>
+            <div class="accordion-body">En varsinaisesti korjaa puhelimia, siihen tarvitaan pölytön ympäristö. Mutta jos esim. olet ostanut uuden puhelimen, ja tarvitset tiedostojen siirrossa apua, niin siihen saat minulta apua.</div>
           </div>
         </div>
         <!-- Item 2 -->
@@ -228,7 +257,7 @@
           </div>
         </div>
         <!-- Item 4 -->
-        <div class="accordion-item">
+        <!-- <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-four">
@@ -242,9 +271,9 @@
               Suscipit corrupti, pariatur aspernatur voluptatibus voluptate soluta natus itaque delectus nesciunt totam
               necessitatibus, ex voluptatum autem, ad mollitia ab veritatis accusamus et optio iste. Natus, sunt.</div>
           </div>
-        </div>
+        </div> -->
         <!-- Item 5 -->
-        <div class="accordion-item">
+        <!-- <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
               data-bs-target="#question-five">
@@ -258,7 +287,7 @@
               Suscipit corrupti, pariatur aspernatur voluptatibus voluptate soluta natus itaque delectus nesciunt totam
               necessitatibus, ex voluptatum autem, ad mollitia ab veritatis accusamus et optio iste. Natus, sunt.</div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
