--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
-      <a href="#" class="navbar-brand">Frontend Bootcamp</a>
+      <!-- <a href="#" class="navbar-brand">Frontend Bootcamp</a> -->
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#learn" class="nav-link">What you'll learn</a>
+            <a href="#me" class="nav-link">Minä</a>
           </li>
           <li class="nav-item">
             <a href="#faq" class="nav-link">UKK</a>
@@ -70,14 +70,15 @@
           <button class="btn btn-dark btn-lg" type="button" id="button-addon2">
             Button
           </button> -->
+        </div>
       </div>
     </div>
-    </div>
   </section>
-
+  
   <!-- Boxex -->
-  <section class="p-5">
+  <section id="me" class="p-5">
     <div class="container">
+      <h2 class="text-center mb-4">Minä</h2>
       <div class="row text-center g-4">
         <div class="col-md">
           <div class="card bg-dark text-light">
@@ -85,9 +86,7 @@
               <div class="h1 mb-3">
                 <i class="bi bi-file-earmark-pdf"></i>
               </div>
-              <h3 class="card-title mb-3">
-                Minun CV
-              </h3>
+              <h3 class="card-title mb-3 text-primary">Minun CV</h3>
               <p class="card-text">
                 Hei, alla olevasta napista voit ladata minun CV:n.
               </p>
@@ -102,9 +101,9 @@
               <div class="h1 mb-3">
                 <i class="bi bi-person-square"></i>
               </div>
-              <h3 class="card-title mb-3">Minusta</h3>
+              <h3 class="card-title mb-3 text-primary">Minusta</h3>
               <p class="card-text">
-                Jos olet kiinnostunut tietämään enemmän minusta, lataa minusta pdf-tiedosto.
+                Jos olet kiinnostunut tietämään minusta enemmän, lataa pdf-tiedosto.
               </p>
               <a href="/assets/Mina.pdf" target="_blank" class="btn btn-dark"><i class="bi bi-file-earmark-pdf"></i>
                 Minä.pdf</a>
@@ -168,26 +167,28 @@
           <div class="carousel-item active">
             <img src="/assets/openshoressaimaa.jpg" class="d-block w-100" alt="image">
             <div class="carousel-caption d-none d-md-block">
-              <h5>Open Shores Saimaa mainos video</h5>
-              <p>Minun kuvaama ja editoima</p>
+              <h4 class="text-primary">Open Shores Saimaa mainos video</h4>
+              <p>Cruises at Lake Saimaa Finland</p>
+              <p>Kuvaus ja editointi: Joacim Rönn</p>
               <a href="https://www.youtube.com/watch?v=eUhuwpOWoXQ" target="_blank" class="btn btn-primary"><i
-                  class="bi bi-youtube"></i> Katso video</a>
+                class="bi bi-youtube"></i> Katso video</a>
+              </div>
             </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/assets/sares.jpg" class="d-block w-100" alt="image">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Säres-Center</h5>
-              <p>Minun viimeisin www-sivusto asiakkaalle</p>
-              <a href="https://säres.fi" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Avaa
-                www-sivut</a>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="/assets/savonlinna.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+            <div class="carousel-item">
+              <img src="/assets/sares.jpg" class="d-block w-100" alt="image">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Säres-Center</h5>
+                <p>Minun viimeisin www-sivusto asiakkaalle</p>
+                <a href="https://säres.fi" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Avaa
+                  www-sivut</a>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/assets/savonlinna.jpg" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Savonlinna</h5>
+                  <p>Kesällä 2021 FPV lennot Savonlinna yllä</p>
+                  <p>Kuvaus ja editointi: Joacim Rönn</p>
               <a href="https://youtu.be/pefkMymT9Lk" target="_blank" class="btn btn-primary"><i
                   class="bi bi-youtube"></i> Katso video</a>
             </div>
