--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <a href="#me" class="nav-link">Minä</a>
           </li>
           <li class="nav-item">
+            <a href="#portfolio" class="nav-link">Portfolio</a>
+          </li>
+          <li class="nav-item">
             <a href="#faq" class="nav-link">UKK</a>
           </li>
           <li class="nav-item">
@@ -151,7 +154,7 @@
         </div>
       </section> -->
 
-  <section id="learn" class="p-5 bg-dark text-light">
+  <section id="portfolio" class="p-5 bg-dark text-light">
     <h2 class="text-center mb-4">Portfolio</h2>
     <div class="container col-md-5">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
@@ -167,7 +170,7 @@
           <div class="carousel-item active">
             <img src="/assets/openshoressaimaa.jpg" class="d-block w-100" alt="image">
             <div class="carousel-caption d-none d-md-block">
-              <h4 class="text-primary">Open Shores Saimaa mainos video</h4>
+              <h4>Open Shores Saimaa mainos video</h4>
               <p>Cruises at Lake Saimaa Finland</p>
               <p>Kuvaus ja editointi: Joacim Rönn</p>
               <a href="https://www.youtube.com/watch?v=eUhuwpOWoXQ" target="_blank" class="btn btn-primary"><i
@@ -177,7 +180,7 @@
             <div class="carousel-item">
               <img src="/assets/sares.jpg" class="d-block w-100" alt="image">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Säres-Center</h5>
+                <h4>Säres-Center</h4>
                 <p>Minun viimeisin www-sivusto asiakkaalle</p>
                 <a href="https://säres.fi" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Avaa
                   www-sivut</a>
@@ -186,7 +189,7 @@
               <div class="carousel-item">
                 <img src="/assets/savonlinna.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Savonlinna</h5>
+                  <h4>Savonlinna</h4>
                   <p>Kesällä 2021 FPV lennot Savonlinna yllä</p>
                   <p>Kuvaus ja editointi: Joacim Rönn</p>
               <a href="https://youtu.be/pefkMymT9Lk" target="_blank" class="btn btn-primary"><i
@@ -205,10 +208,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
-
-
-
     </div>
   </section>
 
