--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </section>
   
   <!-- Boxex -->
-  <section id="me" class="p-5">
+  <section id="me" class="p-5" data-bs-offset="30">
     <div class="container">
       <h2 class="text-center mb-4">Minä</h2>
       <div class="row text-center g-4">
