--- a/index.html
+++ b/index.html
@@ -5,27 +5,20 @@
   <title>Joken Ekat Bootstrap sivut</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/styles.css">
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 </head>
 
-<body>
+<body data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="80" tabindex="0">
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+  <nav id="navbar-example2" class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
-      <!-- <a href="#" class="navbar-brand">Frontend Bootcamp</a> -->
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navmenu">
+      <div class=" collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a href="#me" class="nav-link">Minä</a>
+            <a href="#me" class="nav-link">Minäää</a>
           </li>
           <li class="nav-item">
             <a href="#portfolio" class="nav-link">Portfolio</a>
@@ -73,13 +66,13 @@
           <button class="btn btn-dark btn-lg" type="button" id="button-addon2">
             Button
           </button> -->
-        </div>
       </div>
     </div>
+    </div>
   </section>
-  
+
   <!-- Boxex -->
-  <section id="me" class="p-5" data-bs-offset="30">
+  <section id="me" class="p-5">
     <div class="container">
       <h2 class="text-center mb-4">Minä</h2>
       <div class="row text-center g-4">
@@ -113,46 +106,9 @@
             </div>
           </div>
         </div>
-        <!-- <div class="col-md text-center">
-          <div class="card bg-dark text-light">
-            <div class="card-body text-center">
-              <div class="h1 mb-3">
-                <i class="bi bi-people"></i>
-              </div>
-              <h3 class="card-title mb-3">In Person</h3>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem assumenda consectetur aliquid
-                incidunt iste velit.
-              </p>
-              <a href="#" class="btn btn-primary">Read more</a>
-            </div>
-          </div>
-        </div> -->
       </div>
     </div>
   </section>
-
-  <!-- Learn sections -->
-  <!-- <section id="learn" class="p-5">
-    <div class="container">
-      <div class="row align-items-center justify-conten-between">
-        <div class="col-md">
-          <img class="img-fluid" src="/img/fundamentals.svg" alt="">
-        </div>
-        <div class="col-md p-5">
-          <h2>Learn the fundementals</h2>
-          <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptatibus quaerat odio
-            esse, debitis at!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae vitae, aut inventore deserunt
-              perspiciatis deleniti, est quae rerum porro non dicta quo quaerat molestias repellat eum, eaque sint iste
-              pariatur.</p>
-              <a href="#" class="btn btn-light mt-3">
-                <i class="bi bi-chevron-right"></i> Read more
-              </a>
-            </div>
-          </div>
-        </div>
-      </section> -->
 
   <section id="portfolio" class="p-5 bg-dark text-light">
     <h2 class="text-center mb-4">Portfolio</h2>
@@ -174,24 +130,24 @@
               <p>Cruises at Lake Saimaa Finland</p>
               <p>Kuvaus ja editointi: Joacim Rönn</p>
               <a href="https://www.youtube.com/watch?v=eUhuwpOWoXQ" target="_blank" class="btn btn-primary"><i
-                class="bi bi-youtube"></i> Katso video</a>
-              </div>
+                  class="bi bi-youtube"></i> Katso video</a>
             </div>
-            <div class="carousel-item">
-              <img src="/assets/sares.jpg" class="d-block w-100" alt="image">
-              <div class="carousel-caption d-none d-md-block">
-                <h4>Säres-Center</h4>
-                <p>Minun viimeisin www-sivusto asiakkaalle</p>
-                <a href="https://säres.fi" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Avaa
-                  www-sivut</a>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/assets/savonlinna.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h4>Savonlinna</h4>
-                  <p>Kesällä 2021 FPV lennot Savonlinna yllä</p>
-                  <p>Kuvaus ja editointi: Joacim Rönn</p>
+          </div>
+          <div class="carousel-item">
+            <img src="/assets/sares.jpg" class="d-block w-100" alt="image">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>Säres-Center</h4>
+              <p>Minun viimeisin www-sivusto asiakkaalle</p>
+              <a href="https://säres.fi" target="_blank" class="btn btn-primary"><i class="bi bi-youtube"></i> Avaa
+                www-sivut</a>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="/assets/savonlinna.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h4>Savonlinna</h4>
+              <p>Kesällä 2021 FPV lennot Savonlinna yllä</p>
+              <p>Kuvaus ja editointi: Joacim Rönn</p>
               <a href="https://youtu.be/pefkMymT9Lk" target="_blank" class="btn btn-primary"><i
                   class="bi bi-youtube"></i> Katso video</a>
             </div>
@@ -279,38 +235,6 @@
             </div>
           </div>
         </div>
-        <!-- Item 4 -->
-        <!-- <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#question-four">
-              <h5>How do I sign up?</h5>
-            </button>
-          </h2>
-          <div id="question-four" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-            data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque laborum
-              officia aspernatur tenetur corrupti? Iure est rerum nostrum reiciendis exercitationem ipsum soluta dicta?
-              Suscipit corrupti, pariatur aspernatur voluptatibus voluptate soluta natus itaque delectus nesciunt totam
-              necessitatibus, ex voluptatum autem, ad mollitia ab veritatis accusamus et optio iste. Natus, sunt.</div>
-          </div>
-        </div> -->
-        <!-- Item 5 -->
-        <!-- <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-              data-bs-target="#question-five">
-              <h5>Will you help me find a job?</h5>
-            </button>
-          </h2>
-          <div id="question-five" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-            data-bs-parent="#questions">
-            <div class="accordion-body">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor atque laborum
-              officia aspernatur tenetur corrupti? Iure est rerum nostrum reiciendis exercitationem ipsum soluta dicta?
-              Suscipit corrupti, pariatur aspernatur voluptatibus voluptate soluta natus itaque delectus nesciunt totam
-              necessitatibus, ex voluptatum autem, ad mollitia ab veritatis accusamus et optio iste. Natus, sunt.</div>
-          </div>
-        </div> -->
       </div>
     </div>
   </section>
@@ -531,9 +455,6 @@
               <a href="https://www.youtube.com/channel/UC6gwaVZ7x_C6fRnhLJGqlyA"><i
                   class="bi bi-youtube text-dark mx-1"></i> Joke-M0ni</a>
             </li>
-            <!-- <li class="list-group item">
-              <span class="fw-bold">Student email:</span>student@frontendbc.test
-            </li> -->
           </ul>
         </div>
         <div class="col-md">
@@ -566,103 +487,43 @@
             method="post">
             <fieldset id="fs-frm-inputs">
               <div class="mb-3">
-                <input class="form-control" type="text" name="name" id="full-name" placeholder="Etunimi sukunimi" required="">
+                <input class="form-control" type="text" name="name" id="full-name" placeholder="Etunimi sukunimi"
+                  required="">
               </div>
               <div class="mb-3">
-                <input class="form-control" type="email" name="_replyto" id="email-address" placeholder="Sähköposti" required="">
+                <input class="form-control" type="email" name="_replyto" id="email-address" placeholder="Sähköposti"
+                  required="">
               </div>
               <div class="mb-3">
                 <textarea class="form-control" rows="5" name="message" id="message"
-                  placeholder="Tähän tulee sinun viestisi."
-                  required=""></textarea>
-                <input class="form-control" type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
+                  placeholder="Tähän tulee sinun viestisi." required=""></textarea>
+                <input class="form-control" type="hidden" name="_subject" id="email-subject"
+                  value="Contact Form Submission">
               </div>
             </fieldset>
             <div class="g-recaptcha" data-sitekey="6Lc1KUMhAAAAACp02MG2uCqZKGcT_20OxMptx-j-"></div>
-            <br/>
+            <br />
             <input type="submit" value="Lähetä">
           </form>
-
-          <!-- <form
-        action="https://formspree.io/f/xzbwpjpq"
-        method="POST"
-      >
-          <div class="mb-3">
-            <label for="name" class="col-form-label">
-              Nimi *
-            </label>
-            <input type="text" class="form-control" id="name" name="name">
-          </div>
-          <div class="mb-3">
-            <label for="email" class="col-form-label">Sähköposti *</label>
-            <input type="email" class="form-control" id="email" name="email">
-          </div>
-          <div class="mb-3">
-            <label for="phone" class="col-form-label">Puhelin:</label>
-            <input type="tel" class="form-control" id="phone" name="phone">
-          </div>
-          <div class="mb-3">
-            <label for="text" class="col-form-label">Viesti:</label>
-            <input type="text" class="form-control" id="message" name="message">
-          </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </div> -->
         </div>
       </div>
     </div>
-
-
-
-
-    <!-- <div class="container-fluid p-5 bg-secondary text-white text-center">
-  <h1>About Me</h1>
-  <span class="avatar"><img src="/img/jokke_sm.png" alt="jokke"></span>
-  <p>Resize this responsive page to see the effect!</p>
-</div>
-
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-3">
-      <h3>Wordpress</h3>
-      <p>Olen tehnyt www-sivuja wordpressillä vuodesta 2008.</p>
-      <p>Valmiita sivuja joita on ollut tuotannossa on yli 100.</p>
-    </div>
-    <div class="col-sm-3">
-      <h3>HTML/CSS</h3>
-      <p>WWW-sivujen muokkaamiseen kulmakivet html ja css ovat toinen kieleni.</p>
-      <p>Valmiissakin teemapohjissa pitää aina tehdä jotakin muutoksia asiakkaalle.</p>
-    </div>
-    <div class="col-sm-3">
-      <h3>Bootstrap</h3>
-      <p>Tämä on suht uusi tuttavuus jota aloin opiskelemaan.</p>
-      <p>Nämä sivut ovat Bootstrapilla tehty.</p>
-      <p>Aina on hyvä oppia uutta!</p>
-    </div>
-    <div class="col-sm-3">
-      <h3>jQuery/Javascript</h3>
-      <p>Tästä en juurikaan paljoa ymmärrä, mutta toivon oppivani tällä kurssilla lisää.</p>
-      <p>Sen tiedän että tällä saa paljon aikaiseksi.</p>
-    </div>
   </div>
-</div> -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
+  <script src='https://api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-    <script>
-      mapboxgl.accessToken = 'pk.eyJ1Ijoiam9ra2U3MiIsImEiOiJjbDJpcHJkbmEwaWdpM2pxNm14Y215eDQ0In0.BmFYEZCTJEwgNUlAKX540Q';
-      var map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/jokke72/cl2iqpzgi000d14qqhoct03t0',
-        center: [28.371908, 61.786930],
-        zoom: 13
-      });
-    </script>
+  <script>
+    mapboxgl.accessToken = 'pk.eyJ1Ijoiam9ra2U3MiIsImEiOiJjbDJpcHJkbmEwaWdpM2pxNm14Y215eDQ0In0.BmFYEZCTJEwgNUlAKX540Q';
+    var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/jokke72/cl2iqpzgi000d14qqhoct03t0',
+      center: [28.371908, 61.786930],
+      zoom: 13
+    });
+  </script>
 </body>
 
 </html>
